--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="number"></string>
+    <string name="add">+</string>
+    <string name="sub">-</string>
+    <string name="mult">X</string>
+    <string name="div">/</string>
     <color name="grey">#7D7D7D</color>
 
 </resources>
